syntax = "proto3";

option go_package = "tsuwari/nats/scheduler";

message CreateDefaultCommandsRequest {
  string userId = 1;
}

message CreateDefaultCommandsResponse {
  
}